fixed API endpoints, updated README
