# src/packages/lambdas/src/handlers/express/UserService.ts
@@ -7,18 +7,30 @@ export const listUsers = (request: Request, response: Response) => {
   expressHandler(Lambdas.listUsers, request, response);
 };
 
-export const findUser = (request: Request, response: Response) => {
-  expressHandler(Lambdas.findUser, request, response);
+export const findUserById = (request: Request, response: Response) => {
+  expressHandler(Lambdas.findUserById, request, response);
+};
+
+export const findUserByUsername = (request: Request, response: Response) => {
+  expressHandler(Lambdas.findUserByUsername, request, response);
 };
 
 export const createUser = (request: Request, response: Response) => {
   expressHandler(Lambdas.createUser, request, response);
 };
 
-export const updateUser = (request: Request, response: Response) => {
-  expressHandler(Lambdas.updateUser, request, response);
+export const updateUserById = (request: Request, response: Response) => {
+  expressHandler(Lambdas.updateUserById, request, response);
 };
 
-export const deleteUser = (request: Request, response: Response) => {
-  expressHandler(Lambdas.deleteUser, request, response);
+export const updateUserByUsername = (request: Request, response: Response) => {
+  expressHandler(Lambdas.updateUserByUsername, request, response);
+};
+
+export const deleteUserById = (request: Request, response: Response) => {
+  expressHandler(Lambdas.deleteUserById, request, response);
+};
+
+export const deleteUserByUsername = (request: Request, response: Response) => {
+  expressHandler(Lambdas.deleteUserByUsername, request, response);
 };
