# src/packages/lambdas/src/handlers/lambda/index.ts
@@ -1,7 +1,27 @@
 import { createUser } from 'src/handlers/lambda/user/createUser';
-import { updateUser } from 'src/handlers/lambda/user/updateUser';
-import { deleteUser } from 'src/handlers/lambda/user/deleteUser';
-import { findUser } from 'src/handlers/lambda/user/findUser';
+
+import { updateUserById } from 'src/handlers/lambda/user/updateUser';
+import { updateUserByUsername } from 'src/handlers/lambda/user/updateUser';
+
+import {
+  deleteUserById,
+  deleteUserByUsername,
+} from 'src/handlers/lambda/user/deleteUser';
+
+import {
+  findUserById,
+  findUserByUsername,
+} from 'src/handlers/lambda/user/findUser';
+
 import { listUsers } from 'src/handlers/lambda/user/listUsers';
 
-export { createUser, updateUser, deleteUser, findUser, listUsers };
+export {
+  createUser,
+  updateUserById,
+  updateUserByUsername,
+  deleteUserById,
+  deleteUserByUsername,
+  findUserById,
+  findUserByUsername,
+  listUsers,
+};
