# src/packages/lambdas/src/handlers/lambda/user/deleteUser/index.ts
@@ -1,57 +1,4 @@
-import * as UserRepository from 'src/repository/user';
-import { LambdaError } from 'src/libs/errors';
+import { deleteUserById } from './deleteUserById';
+import { deleteUserByUsername } from './deleteUserByUsername';
 
-import {
-  errorHandler,
-  response,
-  match,
-  isUsername,
-  isUserId,
-} from 'src/libs/utils';
-
-import { APIGatewayProxyResult, APIGatewayEvent } from 'aws-lambda';
-import { ClientErrorCodes } from 'src/libs/errors/types';
-import { SuccessCodes } from 'src/libs/utils/response/types';
-import { UserPathParameters } from 'src/handlers/lambda/user/types';
-
-export const deleteUser = async (
-  event: APIGatewayEvent
-): Promise<APIGatewayProxyResult> => {
-  try {
-    const pathParameters = event?.pathParameters || {};
-
-    const result = match(pathParameters)
-      .on(
-        (pathParameters: UserPathParameters) => isUsername(pathParameters),
-        async () => {
-          const result = await UserRepository.deleteByName(
-            pathParameters.username
-          );
-
-          return result;
-        }
-      )
-      .on(
-        (pathParameters: UserPathParameters) => isUserId(pathParameters),
-        async () => {
-          const result = await UserRepository.deleteById(
-            parseInt(pathParameters.userId)
-          );
-
-          return result;
-        }
-      )
-      .otherwise(() => {
-        throw new LambdaError(
-          'Missing path parameters',
-          ClientErrorCodes.UNPROCESSABLE_ENTITY
-        );
-      });
-
-    return response(SuccessCodes.OK, {
-      user: result,
-    });
-  } catch (error) {
-    return errorHandler(error, event);
-  }
-};
+export { deleteUserById, deleteUserByUsername };
